# mp3-to-m4b

./: .gitignore  README.md  converter.glade  converter_application.cc  converter_application.h  converter_treestore.cc  converter_treestore.h  converter_window.cc  converter_window.h  get_duration.c  get_duration.cc  get_duration.h  main.cc  menu.glade  meson.build
class-helloworld/: helloworld.cc
fiddling/: README.md  concatenate.c
fiddling/class-helloworld/: helloworld.h
fiddling/drag-and-drop/: treemodel_dnd.cc
fiddling/ffmpeg-examples/: av_dump_format.c  metadata.c  transcode_aac.c  transcoding.cc
fiddling/ffmpeg-stuff/: transcoding.cc
fiddling/glade-subclassing/: deriveddialog.cc
fiddling/glade-test-derived/: application.cc  application.h  derived_window.cc  derived_window.h  main.cc  menu.glade  menu2.glade  window.glade
fiddling/multithread-gtkmm/: exampleworker.cc
fiddling/test/: concat.py  concat.sh
fiddling/treeview_editable/: examplewindow.cc  examplewindow.h
glade-subclassing/: deriveddialog.cc  deriveddialog.h  main.cc
glade-test/: main.cc  window.glade
no-class/: base.cc
resources/: README.md  conversion_dialog.glade  converter.css  converter.glade  menu.glade  resources.xml
src/: conversion_data.cc  conversion_data.h  conversion_dialog.cc  conversion_dialog.h  conversion_worker.cc  conversion_worker.h  converter_application.cc  converter_application.h  converter_treestore.cc  converter_treestore.h  converter_window.cc  converter_window.h  get_duration.cc  get_duration.h  main.cc
